styles/main.css
/* ... */
.process-text-content {
  color: #F2F2F2;
  font-family: "Abel", sans-serif;
  font-size: 1.625rem;
  font-weight: lighter;
}

/* User research stuff*/
#ur-page-section {
  height: 1100px;
  padding-top: 5%;
}

#person-left-column-image-1 {
  top: 10%;
}
#person-left-column-image-2 {
  top: 40%;
}
#person-left-column-image-3 {
  top: 70%;
}
#person-right-column-image-1 {
  top: 30%;
}
#person-right-column-image-2 {
  top: 60%;
}
#person-right-column-image-3 {
  top: 90%;
}

#ur-row-smaller {
  height: 25%;
}
.ur-row-bigger {
  height: 30%;
  width: 80%;
  padding-left: 10%;
  padding-right: 10%;
}
#ur-row-small {
  height: 4%;
}
.ur-image {
  width: 45%;
  padding-top: 2%;
  padding-bottom: 2%;
  padding-left: 2%;
  padding-right: 2%;
  position: relative;
}
#ur-header{
  color: #162753;
  font-family: "Abel", sans-serif;
  font-size: 2rem;
  font-weight: lighter;
  position: relative;
  height: 20%;
}
#ur-content {
  color: #641B36;
  font-family: "Abel", sans-serif;
  font-size: 1.625rem;
  font-weight: lighter;
  position: relative;
  height: 80%;
}

#ur-link{
  color: #641B36;
  font-family: "Abel", sans-serif;
  font-size: 1.625rem;
  position: relative;
  top: 80%;
  margin-left: 45%;
}

/* competitive analysis section */
#ca-page-section {
  height: 1900px;
  background-color: #162753;
  padding-top: 5%;
}
.ca-first-row {
  height: 35%;
}
.ca-second-row {
  height: 55%;
}
#ca-first-inner-row {
  position: relative;
  top: 5%;
}
.ca-second-inner-row {
  height: 75%;
  position: relative;
  top: 10%;
}
.ca-bottom-column-image {
  top: 85%;
}
.ca-inner-column {
  width: 25%;
  padding-left: 3.5%;
  padding-right: 3.5%;
}
#ca-diamond {
  transform: rotateY(180deg);
}
#ca-header {
  color: #E2C8B1;
  font-size: 2rem;
}
.ca-content {
  color: #F2F2F2;
}
#ca-google-drive-image {
  margin-left: 10%;
}
#ca-dropbox-image {
  margin-left: 15%;
}
#ca-onedrive-image {
  width: 80%;
}
.ca-google-list {
  font-family: "Abel", sans-serif;
  font-size: 1.625rem;
  color: #E2C8B1;
  margin: 15% 0 10px 0;
}
.ca-dropbox-list {
  font-family: "Abel", sans-serif;
  font-size: 1.625rem;
  color: #E2C8B1;
  margin: 15% 0 10px 0;
}
.ca-onedrive-list {
  font-family: "Abel", sans-serif;
  font-size: 1.625rem;
  color: #E2C8B1;
  margin: 15% 0 10px 0;
}
#ca-link{
  color: #E2C8B1;
  font-family: "Abel", sans-serif;
  font-size: 1.625rem;
  position: relative;
  margin-left: 35%;
}
#strengths-row {
  position: relative;
  top: -15%;
}
#weaknesses-row {
  position: relative;
  top: -20%;
}
#ca-dropbox-weaknesses {
}
/* Persona stuff*/
#persona-page-section{
  height: 3200px;
  padding-top: 5%;
}
#persona-blue-diamond{
  transform: rotateY(180deg);
}
#persona-blue-diamond2{
  transform: rotateY(180deg);
}
#persona-header{
  font-size: 2rem;
  color:#162753;
}
#persona-content {
  font-size: 1.625rem;
  color: #641B36;
}
.persona-names-row {
  height: 3%;
}
.persona-motivations-row {
  height: 15%;
}
.persona-inner-column {
  padding-left: 7%;
}

.persona-frustrations-row {
  position: relative;
  top: -121px;
}
.persona-user-stories-row {
  height: 15%;
}
#persona-user-stories-text {
  position: relative;
  top: -100px;
}
#persona-user-stories-image-one{
  position: relative;
  top: -94px;
}
#persona-user-stories-image-two{
  position: relative;
  top: -96px;
}

.neha-inner-column {
  width: 35%;
  margin-right: 2.5%;
}
.ty-inner-column {
  width: 35%;
  margin-left: 2.5%;
}
#neha-quote {
  width: 100%;
  color: #162753;
  position: relative;
  font-size: 1.5rem;
}
#ty-quote {
  width: 100%;
  position: relative;
  font-size: 1.5rem;
}
#neha-image{
  width: 100%;
  position: relative;
}
#ty-image {
  width: 100%;
  position: relative;
}
.neha-info {
  color:#162753;
  font-size: 1.5rem;
}
.ty-info {
  color:#162753;
  font-size: 1.5rem;
}
#view-user-persona-link {
  position: relative;
  margin-left: 40%;
  font-family: "Abel", sans-serif;
  color: #641B36;
  font-size: 1.625rem;
  top: -201px;
}

/*
  User flows stuff
*/
#user-flows-page-section {
  background-color: #162753;
  height: 1800px;
}
#user-flows-column-two-header {
  text-align: left;
  color: #E2C8B1;
}
#user-flow-image {
  height: 70%;
  width: 85%;
  padding-left: 10%;
  padding-right: 5%;
}
#user-flow-link {
  position: relative;
  color: #E2C8B1;
  font-family: "Abel", sans-serif;
  font-size: 1.625rem;
  top: 5%;
  margin-left: 45%;
}
.user-flow-text {
  color: #F2F2F2;
}
#user-flow-row-1 {
  height: 20%;
  padding-top: 10%;
}
#user-flow-row-2 {
  height: 70%;
}

.user-flow-column-image {
  transform: rotateY(180deg);
}

/*
  Wireframes
*/
#wireframes-page-section {
  height: 2400px;
}
#wireframes-column-two-header {
  text-align: left;
}
#wireframes-image-one {

  width: 85%;
  margin-left: 5%;
}
#wireframes-image-two {
  top:-10%;
  margin-left: 5%;
  width: 85%;
  display: visible;
}
#mobile-wireframes {
  display: none;
}

#wireframes-column-image-one {
  top: 0%;
  padding-left: 0%;
  padding-right: 0%;
  width: 100%;
}
#wireframes-column-image-three {
  top: 30%;
}
#wireframes-row-one {
  padding-top: 10%;
  height: 20%;
}
#wireframes-row-two {
  height: 35%;
}
#wireframes-row-three {
  height: 35%;
}
#wireframes-link {
    position: relative;
    margin-left: 45%;
    color: #641B36;
    font-family: "Abel", sans-serif;
    font-size: 1.625rem;
    top: 5%;
}


/*
  Mockups
*/
#mockups-page-section {
  background-color: #641B36;
  height: 1600px;
  padding-top: 5%;
}

#mockups-column-two-header {
  text-align: left;
  color: #E2C8B1;
}
.mockups-text{
  color: #F2F2F2;
}
#mockups-row-1 {
  height: 35%;
}
#mockups-row-2 {
  height: 65%;
  top:-10%;
}
#mockups-image-1 {
  width: 90%;
  padding-left: 5%;
  padding-right: 5%;
}
#mockups-image-2 {
  width: 90%;
  padding-left: 5%;
  padding-right: 5%;
}
#mockups-image-3 {
  width: 90%;
  padding-left: 5%;
  padding-right: 5%;
}
/* ... */

